--- a/proj-int/src/app/app.html
+++ b/proj-int/src/app/app.html
@@ -1,14 +1,60 @@
-<mat-toolbar>
-  <button matIconButton class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <span>My App</span>
-  <span class="example-spacer"></span>
-  <button matIconButton class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-    <mat-icon>favorite</mat-icon>
-  </button>
-  <button matIconButton class="example-icon" aria-label="Example icon-button with share icon">
-    <mat-icon>share</mat-icon>
-  </button>
-</mat-toolbar>
-<router-outlet />
+<mat-sidenav-container class="sidenav-container">
+  <!-- Sidebar configuração -->
+  <mat-sidenav #drawer class="sidenav" fixedInViewport
+      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+      [mode]="(isHandset$ | async) ? 'over' : 'side'"
+      [opened]="false">
+    
+    <mat-toolbar>Navegação</mat-toolbar>
+    
+    <!-- caminho para modulo/componente -->
+    <mat-nav-list>
+      <a mat-list-item routerLink="/contador/conta" routerLinkActive="active">
+        <mat-icon>calculate</mat-icon>
+        <span>Contador</span>
+      </a>
+      <a mat-list-item routerLink="/estrutura/diretiva" routerLinkActive="active">
+        <mat-icon>account_tree</mat-icon>
+        <span>Estrutura</span>
+      </a>
+      <a mat-list-item routerLink="/produto/estoque" routerLinkActive="active">
+        <mat-icon>inventory_2</mat-icon>
+        <span>Produto</span>
+      </a>
+      <a mat-list-item routerLink="/produtosmodule/listaprodutos" routerLinkActive="active">
+        <mat-icon>category</mat-icon>
+        <span>Produtos Lista</span>
+      </a>
+      <a mat-list-item routerLink="/dados/tabela" routerLinkActive="active">
+  <mat-icon>analytics</mat-icon>
+  <span>Dados</span>
+</a>
+
+    </mat-nav-list>
+  </mat-sidenav>
+
+  <!-- Conteudo principal -->
+  <mat-sidenav-content>
+
+    <mat-toolbar>
+      <button matIconButton 
+              class="example-icon" 
+              aria-label="Example icon-button with menu icon"
+              (click)="drawer.toggle()">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <span>Menu</span>
+      <span class="example-spacer"></span>
+      <button matIconButton class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+        <mat-icon>favorite</mat-icon>
+      </button>
+      <button matIconButton class="example-icon" aria-label="Example icon-button with share icon">
+        <mat-icon>share</mat-icon>
+      </button>
+    </mat-toolbar>
+
+    <div class="content">
+      <router-outlet />
+    </div>
+  </mat-sidenav-content>
+</mat-sidenav-container>
