--- a/proj-int/src/app/app.html
+++ b/proj-int/src/app/app.html
@@ -29,6 +29,10 @@
   <mat-icon>analytics</mat-icon>
   <span>Dados</span>
 </a>
+ <a mat-list-item routerLink="/funcionario/dados" routerLinkActive="active">
+  <mat-icon>person</mat-icon>
+  <span>Funcionario</span>
+</a>
 
     </mat-nav-list>
   </mat-sidenav>
